Updated: Models - User, OTP, Session